@@ -8,4 +8,4 @@ echo "--- LAUNCH ---"
 echo " > run monitor"
 echo ""
 
-$JAVA --module-path libs:mods --module monitor
+$JAVA --module-path libs:mods --add-modules monitor.observer.beta --module monitor
